--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   list-style: none;
 }
 
@@ -17,11 +16,10 @@
 
 body {
   background-color: var(--color-background);
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 1.1rem;
   letter-spacing: 1.5px;
   color: var(--color-text);
-  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
@@ -42,9 +40,7 @@ section {
 }
 
 .section {
-  -webkit-transform: translateY(-100%) scale(0);
-          transform: translateY(-100%) scale(0);
-  -webkit-transition: all 0.5s ease-in-out;
+  transform: translateY(-100%) scale(0);
   transition: all 0.5s ease-in-out;
   background-color: var(--color-background);
 }
@@ -53,29 +49,22 @@ section {
   display: block;
   -webkit-animation: appear 1s ease-in-out;
           animation: appear 1s ease-in-out;
-  -webkit-transform: translateY(0) scaleY(1);
-          transform: translateY(0) scaleY(1);
+  transform: translateY(0) scaleY(1);
 }
-
 @-webkit-keyframes appear {
   0% {
-    -webkit-transform: translateY(-100%) scaleY(0);
-            transform: translateY(-100%) scaleY(0);
+    transform: translateY(-100%) scaleY(0);
   }
   100% {
-    -webkit-transform: translateY(0) scaleY(1);
-            transform: translateY(0) scaleY(1);
+    transform: translateY(0) scaleY(1);
   }
 }
-
 @keyframes appear {
   0% {
-    -webkit-transform: translateY(-100%) scaleY(0);
-            transform: translateY(-100%) scaleY(0);
+    transform: translateY(-100%) scaleY(0);
   }
   100% {
-    -webkit-transform: translateY(0) scaleY(1);
-            transform: translateY(0) scaleY(1);
+    transform: translateY(0) scaleY(1);
   }
 }
 
@@ -84,33 +73,19 @@ section {
   z-index: 999;
   top: 50%;
   right: 2%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-50%);
 }
-
 .controls .active-btn {
   background-color: var(--color-green) !important;
-  -webkit-transition: all .5 ease-in-out;
-  transition: all .5 ease-in-out;
+  transition: all 0.5 ease-in-out;
 }
-
 .controls .active-btn i {
   color: var(--color-text) !important;
 }
-
 .controls .control {
   border: none;
   padding: 1rem;
@@ -119,25 +94,16 @@ section {
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   margin: 1rem 0;
-  -webkit-box-shadow: var(--box-shadow);
-          box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
 }
-
 .controls .control i {
   font-size: 1.4rem;
   color: var(--color-blue);
 }
-
 .controls .control:hover {
   background-color: var(--color-green);
 }
@@ -145,19 +111,10 @@ section {
 .header-content {
   padding: 5rem;
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .left-part {
@@ -193,28 +150,17 @@ section {
   width: 210px;
   height: 60px;
   border-radius: 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   font-family: inherit;
   font-size: inherit;
   border: none;
   color: var(--color-blue);
   background-color: var(--color-grey);
-  -webkit-transition: all 0.5s cubic-bezier(0.07, 0.63, 0.95, 0.45);
   transition: all 0.5s cubic-bezier(0.07, 0.63, 0.95, 0.45);
 }
-
 .download-btn:hover {
   color: var(--color-text);
   background-color: var(--color-green);
@@ -237,16 +183,9 @@ section {
 
 .about_skills-wrapper {
   margin-left: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  align-items: center;
 }
 
 .about_skills-list-left {
@@ -254,12 +193,8 @@ section {
 }
 
 .about_skills-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .about_skills-item:not(:last-child) {
@@ -271,12 +206,8 @@ section {
 }
 
 .about_lang-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .about_lang-item:not(:last-child) {
@@ -288,16 +219,9 @@ section {
 }
 
 .about_work-item-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  align-items: center;
 }
 
 .about_work-item-title {
@@ -311,7 +235,7 @@ section {
 }
 
 .about_work-item-duration {
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 5px;
 }
 
@@ -320,16 +244,9 @@ section {
 }
 
 .about_edu-item-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  align-items: center;
 }
 
 .about_edu-item-title {
@@ -343,7 +260,7 @@ section {
 }
 
 .about_edu-item-duration {
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 5px;
 }
 
@@ -358,31 +275,61 @@ section {
 }
 
 .portfolio_list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  margin-top: 40px;
+  width: 100%;
 }
 
 .portfolio_item {
-  padding: 15px;
+  display: flex;
+  align-items: center;
+  border: 1px solid var(--color-blue);
+  border-radius: 30px;
 }
 
-.portfolio_image {
-  border-radius: 8px;
-  max-width: 100%;
+.portfolio_item-reverse {
+  display: flex;
+  flex-direction: row-reverse;
 }
 
-.portfolio_item-text {
-  margin-top: 15px;
+.portfolio_item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.portfolio_item-image {
+  margin: 20px;
+  min-width: 200px;
+  border-radius: 20px;
+}
+
+.portfolio-item-description {
+  width: 100%;
+}
+
+.portfolio_item-title {
   text-align: center;
+  margin-bottom: 20px;
+}
+
+.portfolio_item-stack {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.portfolio_item-stack-tech {
+  text-align: center;
+  color: var(--color-green);
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.portfolio_item-description-list {
+  display: flex;
+  justify-content: center;
+}
+
+.portfolio_item-description-item {
+  margin: 0 20px 0 20px;
+  cursor: pointer;
 }
 
 .contact_title {
@@ -396,32 +343,17 @@ section {
 }
 
 .contact_list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .contact_item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   padding: 10px;
   margin: 10px;
 }
@@ -429,23 +361,16 @@ section {
 .contact_icon {
   fill: var(--color-blue);
 }
-
 .contact_icon:hover {
   fill: var(--color-text);
 }
 
 .contact_low-list {
   margin-top: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .contact_low-item {
   margin: 10px 0;
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
